# zephyr-cmock-unity-module

./: .gitignore  CMakeLists.txt  CREATING_TESTS.md  Kconfig  LICENSE  README.md  project-example.yml  requirements.txt  west.yml
.github/workflows/: zephyr-cmock-unity-daily.yml  zephyr-cmock-unity.yml
cmock/: CMakeLists.txt  cmock_cfg.yaml
tests/cmock/: CMakeLists.txt  prj.conf  testcase.yaml
tests/cmock/src/: main.c
tests/unity/: CMakeLists.txt  testcase.yaml
tests/unity/src/: main.c
unity/: CMakeLists.txt  generic_teardown.c  unity_cfg.yaml  unity_config.h
zephyr/: module.yml
